[tool.poetry]
name = "swarm-pybullet-drones"
version = "0.0.3"
description = "PyBullet Gym environments for single and multi-agent reinforcement learning of quadcopter control"
authors = ["Jacopo Panerati <jacopo.panerati@utoronto.ca>"]
license = "MIT"
readme = "pypi_description.md"
repository = "https://github.com/MasumUJN/swarm-pybullet-drones"
packages = [
    { include = "gym_pybullet_drones" }
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22"
Pillow = "^10.0.1"
matplotlib = "^3.5"
cycler = "^0.10"
gymnasium = "^0.29.0"
pybullet = "^3.2"
"ray[rllib]" = "^2.0"
stable-baselines3 = "^2.0"
scipy = "^1.8"
tensorboard = "^2.9"
torch = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
